python/testData/quickFixes/PyAddImportQuickFixTest/combinedElementOrdering/main.py
<warning descr="Unused import statement 'from sys import argv'">from sys import argv</warning>


<error descr="Unresolved reference 'path'">pa<caret>th</error>